practice/codeburst-weekly-challenge/week-6/netpol1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-nginx
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: nginx
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: api
    ports:
    - port: 3333
      protocol: TCP
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
