practice/codeburst-weekly-challenge/week-6/netpol2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-api
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx
    ports:
    - port: 3333
      protocol: TCP
  egress:
  - to:
    - ipBlock:
        cidr: 142.251.209.142/32
    ports:
    - port: 443
      protocol: TCP 
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
